<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="file_view_filePath">LIBRARY://</string>
    <string name="file_view_fileContainerDesc">Files in current folder:</string>
    <string name="global_app_name">my Little Audio Player</string>
	<string name="active_title_none">NONE</string>
	<string name="active_pb_previous_song">previous song</string>
	<string name="active_pb_play_pause">play button</string>
	<string name="active_pb_next_song">next song</string>
	<string name="action_general_add_music">add music</string>
	<string name="action_general_add_folder">add a folder</string>
	<string name="action_general_refresh">refresh the library</string>
	<string name="action_general_set_library">set new library path</string>
	<string name="action_general_settings">show the settings</string>
	<string name="action_popup_new_folder">Enter new Folder name:</string>
	<string name="global_app_desc">This is a little audio Player that I created out of joy. This started as a small project but somehow happened to get my main project for quite a while. This work is published under the LGPLv3 Licence. For more information please visit the GitHub site.</string>
	<string name="global_app_welcome">Welcome to my Little Audio Player</string>
	<string name="preferences_view_src_code">github - source code</string>
	<string name="preferences_view_youtube" translatable="false">Pordohiq - YouTube</string>
	<string name="preferences_view_lgpl">LGPLv3 License</string>
	<string name="preferences_reset_app">reset app</string>
	<string name="preferences_icon_set">The Icons used in this app are originally from the Editor of the Godot Engine. I had to mix some of them into my new creations. The colours too are derived from the Godot Engine Colour Scheme. Godot and it\'s Editor Icons are licenced under the MIT Licence.</string>
	<string name="global_back">back</string>
	<string name="action_element_rename">rename</string>
	<string name="action_element_trash">trash</string>
	<string name="action_element_info" translatable="false">info</string>
	<string name="action_element_move">move</string>
	<string name="action_music_toggle_queue">toggle queue</string>
	<string name="global_accept">Accept</string>
	<string name="global_cancel">Cancel</string>
	<string name="action_element_rename_sysDialog">Rename Element</string>
    <string name="active_mxs_toggle_repeat">toggle repeat</string>
	<string name="active_mxs_toggle_queue">toggle queue</string>
	<string name="active_mxs_toggle_shuffle">toggle shuffle</string>
	<string name="file_view_queuePath">QUEUES://</string>
	<string name="action_popup_new_queue">Enter new Queue name:</string>
	<string name="music_queue_content_block_move_down">move down</string>
	<string name="music_queue_content_block_move_up">move up</string>
	<string name="action_queue_rename_sysDialog">Rename Queue</string>
	<string name="info_audio_file_size">"File size: "</string>
	<string name="info_audio_title">"Title: "</string>
	<string name="info_audio_bitrate">"Bitrate: "</string>
	<string name="info_audio_artist">"Artist: "</string>
	<string name="info_audio_bit_depth">"Bit depth: "</string>
	<string name="info_audio_album" translatable="false">"Album: "</string>
	<string name="info_audio_sample_rate">"Sample rate: "</string>
	<string name="info_audio_year">"Year: "</string>
	<string name="info_audio_channels">"Channels: "</string>
	<string name="info_audio_codec">"Encoding: "</string>
	<string name="introduction_text">"This is \"my Little Audio Player\", a project that I have been working on for quite a time now. It is not only a simple audio player, but you can also create queues of audio files to play back in a specific order or just shuffle or what ever you want. I have created this project with much passion and energy and although I felt like giving up sometimes in this long journey, I am happy to have brought this app so far. I whish you to enjoy! "</string>
	<string name="introduction_active">This is where you can see the current audio file being played back. With the buttons on the left, you can pause and resume audio playback and skip to the next or previous item in queue. In the top you will see the name of the audio file and just below that there is a slider which inidicates the progress through a song. With the buttons on the right you can change the MixingState aka: In what order do I play back the files? What happenes, when the song is finished? With a long press on the middle button on the right you open the queue menu, where you can create and select queues.</string>
	<string name="introduction_forward">next</string>
	<string name="introduction_skip">skip</string>
	<string name="introduction_action">This is the Action Bar. You will find it in the bottom. With this you can do actions on the current library. Short description of icons: You can add a Audio File from somewhere else, create a folder, reload the whole tree from disk, set a new library path and access the settings page. In this bar there will be also actions on certain files and queues.</string>
	<string name="info_directory_audio">"SubAudiofiles: "</string>
	<string name="info_directory_dirs">"Subfolders: "</string>
	<string name="info_directory_rec_file_size">"Recursive File Size: "</string>
	<string name="info_queue_element_count">"Elements in Queue:  "</string>
	<string name="info_queue_length">"Cumulative length: "</string>
</resources>
