<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/middleGrey">
		
		<ImageView
			android:id="@+id/action_general_add_music"
			android:contentDescription="@string/action_general_add_music"
			
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			
			android:src="@drawable/action_general_add_music" />
		
		<ImageView
			android:id="@+id/action_general_add_folder"
			android:contentDescription="@string/action_general_add_folder"
			
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			
			android:src="@drawable/action_general_add_folder" />
		
		<View
			android:layout_width="2dp"
			android:layout_height="match_parent"
			android:background="@color/lightGrey"/>
		
		<ImageView
			android:id="@+id/action_general_refresh"
			android:contentDescription="@string/action_general_refresh"
			
			android:layout_height="50dp"
			android:layout_width="50dp"
			android:layout_weight="1"
			
			android:src="@drawable/action_general_refresh" />
		
		<ImageView
			android:id="@+id/action_general_set_library"
			android:contentDescription="@string/action_general_set_library"
			
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			
			android:src="@drawable/action_general_set_library" />
		
		<View
			android:layout_width="2dp"
			android:layout_height="match_parent"
			android:background="@color/lightGrey"/>
		
		<ImageView
			android:id="@+id/action_general_settings"
			android:contentDescription="@string/action_general_settings"
			
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_weight="1"
			
			android:src="@drawable/action_general_settings" />
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="50dp" />
</FrameLayout>