<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/darkGrey">
	
	<ImageView
		android:layout_gravity="center"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:contentDescription="@string/global_app_welcome"
		android:src="@drawable/global_app_icon" />
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="32sp"
		android:textColor="@color/lightGrey"
		android:textAlignment="center"
		android:text="@string/global_app_welcome" />
	<View
		android:layout_width="match_parent"
		android:layout_height="4dp"
		android:background="@color/lightGrey" />
	
	<LinearLayout
		android:id="@+id/introduction_screen_1"
		android:visibility="gone"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/lightGrey"
				android:textAlignment="center"
				android:text="@string/introduction_text" />
		</ScrollView>
		<View
			android:layout_width="match_parent"
			android:layout_height="4dp"
			android:background="@color/lightGrey" />
		<LinearLayout
			android:id="@+id/preferences_action_set_library"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:orientation="horizontal"
			tools:ignore="UseCompoundDrawables">
			
			<ImageView
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:src="@drawable/action_general_set_library"
				android:contentDescription="@string/action_general_set_library" />
			
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/action_general_set_library"
				android:textSize="20sp"
				android:layout_gravity="center_vertical"
				android:textColor="@color/lightGrey"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/introduction_screen_2"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:layout_weight="1"
		android:visibility="gone">
		<my.little.audio.player.android.Active
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<View
			android:layout_width="match_parent"
			android:layout_height="4dp"
			android:background="@color/lightGrey" />
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/lightGrey"
				android:textAlignment="center"
				android:text="@string/introduction_active" />
		</ScrollView>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/introduction_screen_3"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:layout_weight="1"
		android:visibility="visible">
		<my.little.audio.player.android.Action.ActionBar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<View
			android:layout_width="match_parent"
			android:layout_height="4dp"
			android:background="@color/lightGrey" />
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:textColor="@color/lightGrey"
				android:textAlignment="center"
				android:text="@string/introduction_action" />
		</ScrollView>
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:orientation="horizontal">
		<ImageView
			android:id="@+id/introduction_skip"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:src="@drawable/back"
			android:contentDescription="@string/introduction_skip"
			android:rotation="270" />
		<View
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"/>
		<ImageView
			android:id="@+id/introduction_forward"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:src="@drawable/back"
			android:contentDescription="@string/introduction_forward"
			android:rotation="180" />
	</LinearLayout>
</LinearLayout>