<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@color/middleGrey"
	android:visibility="visible">
	
	<HorizontalScrollView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		
		<TableLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:stretchColumns="*">
			
			<TableRow tools:ignore="UselessParent">
				<TextView
					android:id="@+id/info_directory_audio"
					android:text="@string/info_directory_audio"
					android:textColor="@color/lightGrey"
					android:textSize="20sp"
					android:layout_marginEnd="8dp" />
				
				<TextView
					android:id="@+id/info_directory_dirs"
					android:text="@string/info_directory_dirs"
					android:textColor="@color/lightGrey"
					android:textSize="20sp"
					android:layout_marginEnd="8dp" />
			</TableRow>
		</TableLayout>
	</HorizontalScrollView>
	
	<TextView
		android:id="@+id/info_directory_rec_file_size"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/info_directory_rec_file_size"
		android:textColor="@color/lightGrey"
		android:textSize="20sp" />
	
	<View
		android:layout_width="match_parent"
		android:background="@color/lightGrey"
		android:layout_height="2dp" />
</LinearLayout>